// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteSwitch tests Snapshot for pot.none 1`] = `
<View
  style={
    Object {
      "width": 51,
    }
  }
>
  <ActivityIndicator
    accessibilityLabel="Loading..."
    color="black"
  />
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.noneError 1`] = `
<View
  accessibilityLabel="Try again"
  accessibilityRole="button"
  accessible={true}
  collapsable={false}
  focusable={false}
  hitSlop={
    Object {
      "bottom": 12,
      "left": 12,
      "right": 12,
      "top": 12,
    }
  }
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": 51,
    }
  }
>
  <Text
    accessibilityElementsHidden={true}
    accessibilityLabel=""
    accessible={false}
    allowFontScaling={false}
    importantForAccessibility="no-hide-descendants"
    style={
      Array [
        Object {
          "color": "#0073E6",
          "fontSize": 24,
        },
        Array [
          Array [
            Object {},
            Object {
              "textAlign": "center",
            },
          ],
          Object {
            "color": "#0073E6",
          },
          Object {
            "fontSize": 24,
          },
        ],
        Object {
          "fontFamily": "io-icon-font",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.noneLoading 1`] = `
<View
  style={
    Object {
      "width": 51,
    }
  }
>
  <ActivityIndicator
    accessibilityLabel="Loading..."
    color="black"
  />
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.noneUpdating 1`] = `
<View
  style={
    Object {
      "width": 51,
    }
  }
>
  <ActivityIndicator
    accessibilityLabel="Loading..."
    color="black"
  />
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.some 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={true}
/>
`;

exports[`RemoteSwitch tests Snapshot for pot.some 2`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={false}
/>
`;

exports[`RemoteSwitch tests Snapshot for pot.someError 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={true}
/>
`;

exports[`RemoteSwitch tests Snapshot for pot.someError 2`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={false}
/>
`;

exports[`RemoteSwitch tests Snapshot for pot.someLoading 1`] = `
<View
  style={
    Object {
      "width": 51,
    }
  }
>
  <ActivityIndicator
    accessibilityLabel="Loading..."
    color="black"
  />
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.someLoading 2`] = `
<View
  style={
    Object {
      "width": 51,
    }
  }
>
  <ActivityIndicator
    accessibilityLabel="Loading..."
    color="black"
  />
</View>
`;

exports[`RemoteSwitch tests Snapshot for pot.someUpdating 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  disabled={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={true}
/>
`;

exports[`RemoteSwitch tests Snapshot for pot.someUpdating 2`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessible={true}
  disabled={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#0073E6"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Object {
        "marginBottom": -5,
        "marginTop": -5,
      },
    ]
  }
  thumbTintColor="default"
  tintColor="default"
  value={false}
/>
`;
